--- a/push/push.csproj
+++ b/push/push.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{1D9742EE-01E0-455F-8005-9D733AD8226E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PushPasswird</RootNamespace>
+    <RootNamespace>push</RootNamespace>
     <AssemblyName>PushPasswird</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
