--- a/api/api.vbproj
+++ b/api/api.vbproj
@@ -131,6 +131,8 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Config\Settings.config" />
+    <Content Include="Config\Connections.config" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
