Working to remove all V1 Passwird logic now that the new Passwird is live

--- a/api/Config/Settings.config
+++ b/api/Config/Settings.config
@@ -1,17 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <appSettings>
-  <add key="timeout" value="10000" />
-  <add key="passwirdUserAgent" value="Mozilla/5.0 (PasswirdDeals.app; CPU iPhone OS 5_0 like Mac OS X) AppleWebKit/534.46 (KHTML, like Gecko) Version/5.1 Mobile/9A334 Safari/7534.48.3" />
-  <add key="passwirdUrl" value="http://www.passwird.com" />
-  <add key="passwirdSearchUrl" value="http://www.passwird.com/c/searchnews.pl?dosearch" />
-  <add key="passwirdSearchMatch" value="exact" />
-  <add key="passwirdSearchResultNumber" value="15" />
-
-  <add key="newPasswirdUrl" value="http://www.passwird.com/mobile?show={0}" />
-  <add key="newPasswirdSearchUrl" value="http://passwird.com/mobile/search?query={0}" />
-  <add key="newPasswirdDealUrl" value="http://passwird.com/mobile/deals/{0}" />
-  <add key="newPasswirdImagePrefix" value="md_" />
-  <add key="newPasswirdImagePrefixRegex" value="^(tm|sm|md|og)_" />
-
+  <add key="passwirdUrl" value="http://www.passwird.com/" />
+  <add key="passwirdDealUrl" value="mobile/deals/{0}" />
+  <add key="passwirdDealsUrl" value="mobile?show={0}" />
+  <add key="passwirdSearchUrl" value="mobile/search?query={0}" />
+  
+  <add key="passwirdImagePrefix" value="md_" />
+  <add key="passwirdImagePrefixRegex" value="^(tm|sm|md|og)_" />
+  
   <add key="errorImageUrl" value="http://mccrager.com/Content/img/appicon-PasswirdDeals-half.png" />
 </appSettings>
