--- a/api/Config/Settings.config
+++ b/api/Config/Settings.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <appSettings>
   <add key="passwirdUrl" value="http://www.passwird.com/" />
+  <add key="passwirdImageUrl" value="http://img.passwird.com/" />
   <add key="passwirdDealUrl" value="mobile/deals/{0}" />
   <add key="passwirdDealsUrl" value="mobile?show={0}" />
   <add key="passwirdSearchUrl" value="mobile/search?query={0}" />
