--- a/push/push.csproj
+++ b/push/push.csproj
@@ -72,19 +72,20 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MoonAPNS">
-      <HintPath>..\..\Moon-APNS\Application\MoonApns\bin\Release\MoonAPNS.dll</HintPath>
+      <HintPath>.\MoonAPNS.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\api\bin\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NLog">
-      <HintPath>..\..\Moon-APNS\Application\MoonApns\bin\release\NLog.dll</HintPath>
+      <HintPath>.\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
