More bug fix for push notifications

--- a/api/Config/Settings.config
+++ b/api/Config/Settings.config
@@ -6,7 +6,7 @@
   <add key="passwirdDealsUrl" value="mobile?show={0}" />
   <add key="passwirdSearchUrl" value="mobile/search?query={0}" />
   
-  <add key="passwirdImagePrefix" value="md_" />
+  <add key="passwirdImagePrefix" value="sm_" />
   <add key="passwirdImagePrefixRegex" value="^(tm|sm|md|og)_" />
   
   <add key="errorImageUrl" value="http://mccrager.com/Content/img/appicon-PasswirdDeals-half.png" />
